--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ Homestead.json
 Homestead.yaml
 Thumbs.db
 CLAUDE.md
+CORRECCIONES_APLICADAS.md
+GUIA_TESTING.md
+test-manual.html
+.claude/settings.local.json
+.claude/settings.local.json
+OPTIMIZACIONES_RENDIMIENTO.md
+SOLUCION_URGENTE_419_403.md
